[package]
name = "mrc-to-tiff"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
mrc = { version = "0.1.1", features = ["file", "mmap"] }
rayon = "1.11.0"
tiff = "0.11.3"
tiff-encoder = "0.3.2"
