[package]
name = "mrc-to-tiff"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
mrc = { features = ["std", "mmap"], git = "https://github.com/elemeng/mrc.git", rev="cebd1d0" }
rayon = "1.11.0"
tiff = "0.11.3"
tiff-encoder = "0.3.2"


[[bin]]
name = "mrc-to-tiff"
path = "src/main.rs"

[[bin]]
name = "mrc-to-tiff-gui"
path = "src/gui.rs"
