[package]
name = "mrc-to-tiff"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.59", features = ["derive"] }
eframe = "0.33.3"
egui_plot = "0.34.1"
env_logger = "0.11.9"
indicatif = { version = "0.18.4", features = ["rayon"] }
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
mrc = { features = ["std", "mmap"], git = "https://github.com/elemeng/mrc.git", rev="cebd1d0" }
rayon = "1.11.0"
rfd = "0.17.2"
thiserror = "2.0.18"
tiff = "0.11.3"
tiff-encoder = "0.3.2"


[[bin]]
name = "mrc-to-tiff"
path = "src/main.rs"

[[bin]]
name = "mrc-to-tiff-gui"
path = "src/gui.rs"
